# Cadence-Lab

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  NOTICES.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
.streamlit/: config.toml
app/: index.html  package.json  tailwind.config.js  vite.config.ts
app/src/: App.tsx  index.css  main.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  main.rs
app/src/api/: client.ts  types.ts
app/src/components/: CadencePanel.tsx  Canvas.tsx  MediaAddPanel.tsx  MediaBrowser.tsx  ProjectFilesPanel.tsx  ProjectSwitcher.tsx  ReviewPanel.tsx  RightPanel.tsx  SettingsModal.tsx  SplicingView.tsx  Timeline.tsx  TopBar.tsx  WelcomeScreen.tsx
app/src/hooks/: useKeyboardShortcuts.ts  useKeysStatus.ts  usePipeline.ts  useProjectSourceSync.ts  useTimelineView.ts
app/src/lib/: applyCadenceAction.ts  cadenceQuery.ts  keystore.ts  projectDigest.ts  projectPaths.ts  renderLineage.ts
app/src/stores/: activeProject.ts  appView.ts  cadence.ts  canvasView.ts  planCache.ts  project.ts  spliceNav.ts  spliceVideoRef.ts  splicing.ts  videoRef.ts
docs/: ARCHITECTURE.md  design-splice-classification-reuse.md
src/cadence_lab/: _analysis_cache.py  backends.py  cadence.py  classifier.py  cli.py  denoise.py  events.py  ingest.py  keys.py  models.py  paths.py  planner.py  projects.py  renderer.py  reviewer.py  server.py  ui.py  vision.py
src/video_editor/: backends.py  cli.py  models.py  planner.py  renderer.py  speech.py  ui.py
tests/: conftest.py  test_keys.py  test_paths.py  test_planner.py  test_projects.py  test_reviewer.py
