[project]
name = "video-editor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "JosephLeon", email = "joseph.leon.9@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "faster-whisper>=1.2.1",
    "ffmpeg-python>=0.2.0",
    "groq>=1.2.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "silero-vad>=6.2.1",
    "soundfile>=0.13.1",
    "streamlit>=1.57.0",
    "typer>=0.25.1",
]

[project.scripts]
video-editor = "video_editor:main"

[build-system]
requires = ["uv_build>=0.11.15,<0.12.0"]
build-backend = "uv_build"
